--- a/lib_nativecrash/build.gradle
+++ b/lib_nativecrash/build.gradle
@@ -45,7 +45,8 @@ android {
 
 dependencies {
 
-    implementation libs.androidx.core.ktx
+    //implementation libs.androidx.core.ktx
+    implementation 'androidx.core:core-ktx:1.3.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
